--- a/F4Team/F4Team.csproj
+++ b/F4Team/F4Team.csproj
@@ -7,8 +7,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.Knowledge.QnAMaker" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.9.3" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.9.3" />
     <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.9.3" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.9.3" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.9.3" />
+    <PackageReference Include="QnaMaker" Version="1.0.1" />
+    <PackageReference Include="QnAMakerDialog" Version="3.1.2" />
   </ItemGroup>
 
     <ItemGroup>
