FAQ의 버튼 생성 및 LUIS 결합
버튼 정보를 가지는 FAQ에 대해서는 버튼을 생성할 수 있도록 만들었습니다.
그리고 만약에 FAQ에서 데이터를 찾지 못하는 경우에는 LUIS에서 답변을 한 번 더 찾아보고 FAQ에서 데이터를 받을 수 있도록 제작했습니다.

--- a/F4Team/F4Team.csproj
+++ b/F4Team/F4Team.csproj
@@ -27,4 +27,6 @@
       <Exec Command="if $(ConfigurationName) == Debug node ../Scripts/init.js" />
     </Target>
 
+    <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
