--- a/F4Team/appsettings.json
+++ b/F4Team/appsettings.json
@@ -8,5 +8,8 @@
   "CompatibilityMode": false,
   "QnAKnowledgebaseId": "1e8d8d54-d5f1-402e-b462-489f66db58d6",
   "QnAEndpointKey": "72f523d3-1488-4c5a-88a5-27d8176702ab",
-  "QnAEndpointHostName": "https://teamf4qna.azurewebsites.net/qnamaker"
+  "QnAEndpointHostName": "https://teamf4qna.azurewebsites.net/qnamaker",
+  "LuisId": "a4d4c4f4-c132-413b-9524-72e415331a96",
+  "LuisPredictionKey": "3ad18b4fe0ce41719c5c883e506bf739",
+  "LuisPredictionEndPoint": "https://teamf4authoringnprediction.cognitiveservices.azure.com/"
 }
